NGEO-1248: Fix cropped date by adding padding on right + some refactor

--- a/client/css/dateRangeSlider.less
+++ b/client/css/dateRangeSlider.less
@@ -2,6 +2,8 @@
 .dateSlider-container {
 //	margin-top: 5px;
 	margin-left: 30px;
+	// Add padding-right, to not crop the date by screen
+	padding-right: 30px;
 	margin-right: 30px;
 	overflow: hidden;
 	position: relative;
